Bug 515662 - Bug when adding Style Preset in Text Properties
Summary: Bug when adding Style Preset in Text Properties
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 5.3.0-beta1
Platform: Android Unspecified
: NOR normal
Target Milestone: ---
Assignee: dra.w.p.il.e+bugskde
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2026-02-06 23:20 UTC by Wahyu Mahesa
Modified: 2026-02-11 22:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen record of the bug (202.32 KB, video/mp4)
2026-02-06 23:20 UTC, Wahyu Mahesa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wahyu Mahesa 2026-02-06 23:20:52 UTC
Created attachment 189313 [details]
screen record of the bug

SUMMARY
the pop up window turned into white block when adding style preset on the new text properties docker

STEPS TO REPRODUCE
1. click on Add Style Preset on the Text Properties docker

OBSERVED RESULT
the pop up window turned into white block and can't be interacted with except moving it around

EXPECTED RESULT
show a pop up window that can be interacted with

SOFTWARE/OS VERSIONS
Android 16

ADDITIONAL INFORMATION
Device: Xiaomi Pad 7
Comment 1 dra.w.p.il.e+bugskde 2026-02-10 21:29:28 UTC
Can confirm on a Samsung S6 Lite as well. This white box is the window frame that is supposed to be behind the dialog, but it somehow ends up in front instead.
Comment 2 dra.w.p.il.e+bugskde 2026-02-11 22:58:03 UTC
Git commit e4918a901ca48a0ba50aae13bd9f217afbd88cec by Carsten Hartenfels.
Committed on 11/02/2026 at 22:54.
Pushed by hartenfels into branch 'master'.

[android] Use software backend for QtQuick

Because the hardware-accelerated backend does not provide correct window
stacking on Android. Any window containing any kind of QtQuick controls
will always end up stacking behind windows that don't, including our own
dialog borders, so it just makes a complete mess of the stacking order
of dialogs or floating docks. The software backend doesn't have these
issues and causes the widgets to stack normally.

Unfortunately, this also reintroduces the issue of the view not
refreshing when opening a document, so I guess that'll need to be fixed
again.

M  +6    -0    libs/ui/KisApplication.cpp

https://invent.kde.org/graphics/krita/-/commit/e4918a901ca48a0ba50aae13bd9f217afbd88cec