[android] Use software backend for QtQuick

Because the hardware-accelerated backend does not provide correct window
stacking on Android. Any window containing any kind of QtQuick controls
will always end up stacking behind windows that don't, including our own
dialog borders, so it just makes a complete mess of the stacking order
of dialogs or floating docks. The software backend doesn't have these
issues and causes the widgets to stack normally.

Unfortunately, this also reintroduces the issue of the view not
refreshing when opening a document, so I guess that'll need to be fixed
again.

BUG:515662